--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,15 @@
+*{
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
 }
 
 .logo {
@@ -11,9 +20,24 @@
   padding: 4px 32px;
 }
 
+.left-links{
+  margin-right: auto;
+  /* border: 5px solid red; */
+}
+
+.right-links{
+  margin-left: auto;
+  /* border: 5px solid red; */
+}
+
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  gap: 20px;
 }
 
 a {
