--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,17 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  display: flex;
+  padding: 20px;
+  gap: 20px;
+}
+
+.container{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .icon {
@@ -33,6 +44,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+
+.header-container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.header{
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .close-button {
